# mailbox_server

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  https_server.c  https_server.h  led_matrix.c  led_matrix.h  main.c  return_val.h  start_page.html  udp_server.c  udp_server.h  wifi.c  wifi.h
main/cert/: certificate.pem  csr.pem  private_key.pem  private_key_no_passphrase.pem
